corrected some spacing

--- a/css/components/_courses.scss
+++ b/css/components/_courses.scss
@@ -3,7 +3,7 @@
     background: $color-grey-1;
     max-width: $container-width;
     width: 100%;
-    margin: 8vh auto;
+    margin: 0 auto;
 
     .section-heading {
         margin-bottom: 3em;
