--- a/css/components/_instagram.scss
+++ b/css/components/_instagram.scss
@@ -1,19 +1,18 @@
 .instagram {
-    padding: 6em 0 5em;
+    padding: 2em 0;
 
     .container {
         max-width: 1600px;
     }
 
-	.section-heading {
-	    width: 100%;
-	    margin: 0 0 3em;
-	    text-align: center;
+    .section-heading {
+        width: 100%;
+        margin: 0 0 3em;
+        text-align: center;
 
         .icon {
             font-size: 2rem;
             margin-bottom: 0.5em;
         }
-	}
-
+    }
 }
