--- a/css/components/_stories.scss
+++ b/css/components/_stories.scss
@@ -5,7 +5,7 @@
     padding: 3em 0 5em;
     max-width: $container-width;
     min-height: 60vh;
-    margin: 8vh auto;
+    margin: 0 auto;
     border-radius: 0.125em;
 
     .container {
